test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/compare_explicit_and_implict_addr.plx
pub fn main(none) i32 {
    arr: [10]i32;
    #  It's illegal to compare these expressions because
    #      * they have different types: arr is converted to type int *,
    #      * while &arr will have type int (*)[10]
    #      
    return arr == @arr
}
